[tool.poetry]
name = "hasspad"
version = "0.1.0"
description = ""
authors = ["Kevin Chen <keffcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
keybow = "^0.0.3"
websockets = "^8.1"
rich = "^9.8.2"
click = "^7.1.2"
"RPi.GPIO" = "^0.7.0"
spidev = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
